playbooks/argocd/applications/database/obsidian-livesync/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: obsidian
  annotations:
    argocd.argoproj.io/sync-options: Prune=false,Delete=false
