playbooks/argocd/applications/database/obsidian-livesync/deployment-couchdb-rescue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: obsidian-livesync-couchdb-hostpath-rescue
  labels:
    app: couchdb
    codex-rescue: 2026-05-01-hostpath
    release: obsidian-livesync
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: couchdb
      codex-rescue: 2026-05-01-hostpath
      release: obsidian-livesync
  template:
    metadata:
      labels:
        app: couchdb
        codex-rescue: 2026-05-01-hostpath
        release: obsidian-livesync
    spec:
      containers:
        - name: couchdb
          image: couchdb:3.4.2
          imagePullPolicy: IfNotPresent
          ports:
            - name: couchdb
              containerPort: 5984
          livenessProbe:
            httpGet:
              path: /
              port: 5984
            failureThreshold: 6
            periodSeconds: 10
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 5984
            failureThreshold: 6
            periodSeconds: 10
            timeoutSeconds: 1
          volumeMounts:
            - name: data
              mountPath: /opt/couchdb/data
            - name: config-storage
              mountPath: /opt/couchdb/etc/default.d
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: obsidian-livesync-couchdb-rescue-longhorn
        - name: config-storage
          emptyDir: {}
        - name: config
          configMap:
            name: obsidian-livesync-couchdb
            items:
              - key: inifile
                path: chart.ini
              - key: seedlistinifile
                path: seedlist.ini
