playbooks/argocd/applications/database/obsidian-livesync/service-couchdb-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: obsidian-livesync-couchdb
  labels:
    app: couchdb
    app.kubernetes.io/instance: obsidian-livesync
    chart: couchdb-4.6.2
    heritage: Helm
    release: obsidian-livesync
spec:
  type: ClusterIP
  clusterIP: None
  publishNotReadyAddresses: true
  selector:
    app: couchdb
    release: obsidian-livesync
  ports:
    - name: couchdb
      port: 5984
      targetPort: 5984
