playbooks/argocd/applications/database/obsidian-livesync/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: obsidian-livesync-ingress
  namespace: obsidian
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - obsidian.soyspray.vip
      secretName: prod-cert-tls
  rules:
    - host: obsidian.soyspray.vip
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: obsidian-livesync-svc-couchdb
                port:
                  number: 5984
